sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:4: error: not found: value swapped
      swapped = false;
      ^AlgCocktailSort2:5: error: not found: value begin
      for (i <- begin to end)
                ^AlgCocktailSort2:5: error: not found: value end
      for (i <- begin to end)
                         ^AlgCocktailSort2:8: error: not found: value swapped
          swapped =true;
          ^AlgCocktailSort2:10: error: not found: value end
      end-=1;
      ^AlgCocktailSort2:11: error: not found: value end
      for (i <- end to begin by -1)
                ^AlgCocktailSort2:11: error: not found: value begin
      for (i <- end to begin by -1)
                       ^AlgCocktailSort2:14: error: not found: value swapped
          swapped =true;
          ^AlgCocktailSort2:16: error: not found: value begin
      begin+=1;
      ^AlgCocktailSort2:17: error: not found: value swapped
    } while (swapped && end-begin>1);
             ^AlgCocktailSort2:17: error: not found: value end
    } while (swapped && end-begin>1);
                        ^AlgCocktailSort2:17: error: not found: value begin
    } while (swapped && end-begin>1);
                            ^